# zeep-orbit

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README-PHP.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  apps.yaml  composer.json  docker-compose.yml  easypanel.json  go.mod  go.sum  index.yaml  release-notes-v0.1.5.md  zeep-orbit-0.1.4.tgz  zeep-orbit-0.1.5.tgz  zeep-orbit-0.1.6.tgz  zeep-orbit-0.1.7.tgz  zeep-orbit-0.1.8.tgz  zeep-orbit-0.1.9.tgz
.github/: PULL_REQUEST_TEMPLATE.md  release-notes-v0.1.1.md  release-notes-v0.1.2.md  release-notes-v0.1.3.md  release-notes-v0.1.4.md  release-notes-v0.1.5.md  release-notes-v0.1.7.md  release-notes-v0.1.8.md  release-notes-v0.1.9.md  release-notes.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: chart-release.yml  docker-publish.yml  docs.yml
.specs/features/: google-oauth-plan.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
charts/zeep-core/: Chart.yaml  values.yaml
charts/zeep-orbit/: Chart.yaml  values.yaml
clients/go/: README.md  auth.go  client.go  files.go  go.mod  table.go  types.go
clients/java/: .gitignore  pom.xml
clients/php/: composer.json
clients/python/: README.md  (+2 more)
clients/rust/: Cargo.toml  README.md
clients/rust/src/: auth.rs  client.rs  files.rs  lib.rs  table.rs  types.rs
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  secret.example.yaml  secret.yaml  service.yaml
(+178 files in other folders)
