[package]
name = "orbit-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for Zeep Orbit"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
